Avoid jumping content on resize after open/close nav

--- a/resources/stylesheets/component/desktop_lg/main.less
+++ b/resources/stylesheets/component/desktop_lg/main.less
@@ -1,57 +1,33 @@
 body.mediawiki,
 body.mediawiki.x-body {
 	&:not( .navigation-main-collapse ):not( .sitetools-main-collapse ) {
-		.content-wrapper {
-			transition: padding .3s;
-			padding-left: calc(~"( 50vw - @{bs-content-width} / 2 )");
-			padding-right: calc(~"( 50vw - @{bs-content-width} / 2 )");
-		}
-
 		.bs-content.container {
-			transition: margin .3s;
-			width: auto;
-			max-width: @bs-content-width;
-			margin-left: auto;
-			margin-right: auto;
+			.mixin-bs-content-container();
 		}
 	}
 
 	/* collapsing elements */
 	&.navigation-main-collapse.sitetools-main-collapse {
-		.content-wrapper {
-			padding-left: 0;
-			padding-right: 0;
-		}
 		.bs-content.container {
-			width: auto;
-			margin-left: auto;
-			margin-right: auto;
+			.mixin-bs-content-container();
 		}
 	}
 
 	&:not( .navigation-main-collapse ).sitetools-main-collapse {
-		.content-wrapper {
-			transition: padding .3s;
-			padding-left: 0;
-			padding-right: 0;
-		}
 		.bs-content.container {
-			transition: margin .3s;
-			margin-left: auto;
-			margin-right: auto;
+			.mixin-bs-content-container();
 		}
 	}
 
 	&:not( .sitetools-main-collapse ).navigation-main-collapse {
-		.content-wrapper {
-			transition: padding .3s;
-			padding-left: 0;
-			padding-right: 0;
-		}
 		.bs-content.container {
-			transition: margin .3s;
-			margin-left: auto;
-			margin-right: auto;
+			.mixin-bs-content-container();
 		}
 	}
+}
+
+.mixin-bs-content-container() {
+	width: auto;
+	margin-left: auto;
+	margin-right: auto;
 }
